syntax = "proto3";

package wildberries.buyer.v1;

import "common.proto";

option go_package = "wildberries/api/proto/buyer/v1;buyerv1";

// --- Buyer: текущая акция ---
// GET /promotions/current
message GetCurrentPromotionRequest {}

message GetCurrentPromotionResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string theme = 4;
  string status = 5;  // RUNNING
  string date_from = 6;  // RFC3339
  string date_to = 7;
  repeated wildberries.common.v1.Segment segments = 8;
}

// --- Buyer: продукты сегмента ---
// GET /promotions/{promotionId}/segments/{segmentId}/products
message GetSegmentProductsRequest {
  int64 promotion_id = 1;
  int64 segment_id = 2;
  string category = 3;       // filter
  bool only_discounts = 4;     // filter
  string sort = 5;            // e.g. price_asc, discount_desc
  int32 page = 6;
  int32 per_page = 7;
}

message GetSegmentProductsResponse {
  repeated wildberries.common.v1.ProductItem items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 per_page = 4;
  bool completed = 5;  // акция завершена
}

// --- Identification ---
// POST /identification/start
message StartIdentificationRequest {
  int64 promotion_id = 1;
}

message PollQuestion {
  int64 id = 1;
  string text = 2;
  repeated PollOption options = 3;
}

message PollOption {
  int64 id = 1;
  string text = 2;
  string value = 3;
}

message StartIdentificationResponse {
  string method = 1;  // "questions" | "user_profile"
  oneof poll_or_segment {
    Poll poll = 2;           // для method=questions
    int64 result_segment_id = 3;  // для method=user_profile (заглушка — случайный)
  }
}

message Poll {
  repeated PollQuestion questions = 1;
}

// POST /identification/answer
message AnswerRequest {
  int64 promotion_id = 1;
  int64 question_id = 2;
  int64 option_id = 3;
}

message AnswerResponse {
  int64 next_question_id = 1;   // 0 если нет следующего
  int64 result_segment_id = 2;   // 0 если ещё не финал
}

// --- Buyer API Service ---
service BuyerPromotionService {
  rpc GetCurrentPromotion(GetCurrentPromotionRequest) returns (GetCurrentPromotionResponse);
  rpc GetSegmentProducts(GetSegmentProductsRequest) returns (GetSegmentProductsResponse);
}

service IdentificationService {
  rpc StartIdentification(StartIdentificationRequest) returns (StartIdentificationResponse);
  rpc Answer(AnswerRequest) returns (AnswerResponse);
}
